--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
     "version": 2,
+    "functions": {
+        "node": "18.x"
+    },
     "builds": [
         {
             "src": "api/index.php",
