--- a/vercel.json
+++ b/vercel.json
@@ -17,8 +17,8 @@
         }
     ],
     "env": {
-        "APP_NAME": "Laravel Vercel",
-        "APP_DEBUG": "false",
+        "APP_NAME": "Task Manager",
+        "APP_DEBUG": "true",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
@@ -27,6 +27,12 @@
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie",
-        "VIEW_COMPILED_PATH": "/tmp"
+        "VIEW_COMPILED_PATH": "/tmp",
+        "DB_CONNECTION": "pgsql",
+        "DB_HOST": "pgsql",
+        "DB_PORT": "5432",
+        "DB_DATABASE": "laravel",
+        "DB_USERNAME": "sail",
+        "DB_PASSWORD": "password"
     }
 }
