--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
         {
             "src": "public/**",
             "use": "vercel-php@0.6.0"
+        },
+        {
+          "src": "package.json",
+          "use": "vercel-sapper"
         }
     ],
     "routes": [
