--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,25 @@
 {
     "version": 2,
+    "builds": [
+        {
+            "src": "api/index.php",
+            "use": "vercel-php@0.6.0"
+        },
+        {
+            "src": "public/**",
+            "use": "vercel-php@0.6.0"
+        },
+        {
+          "src": "package.json",
+          "use": "vercel-sapper"
+        }
+    ],
     "routes": [
         {
             "src": "/(.*)",
             "dest": "/api/index.php"
         }
     ],
-
     "env": {
         "APP_NAME": "Laravel",
         "APP_DEBUG": "true",
